@@ -1224,25 +1224,40 @@ FLOAT_T sc_vel_table[128] =
     114.816648, 116.518116, 118.223392, 119.931522, 121.641492, 123.352230, 125.062599, 127.000000, 
 };
 
-FLOAT_T sc_pan_table[128] = 
+FLOAT_T sc_pan_table[129] = 
 {
-    0.000000, 0.991559, 1.995705, 3.012181, 4.040722, 5.081070, 6.132960, 7.196127, 
-    8.270307, 9.355232, 10.450637, 11.556249, 12.671801, 13.797020, 14.931634, 16.075369, 
-    17.227952, 18.389104, 19.558551, 20.736012, 21.921207, 23.113859, 24.313683, 25.520396, 
-    26.733716, 27.953356, 29.179029, 30.410450, 31.647327, 32.889370, 34.136291, 35.387795, 
-    36.643589, 37.903378, 39.166867, 40.433758, 41.703753, 42.976553, 44.251857, 45.529363, 
-    46.808769, 48.089771, 49.372062, 50.655338, 51.939288, 53.223608, 54.507984, 55.792107, 
-    57.075664, 58.358342, 59.639826, 60.919800, 62.197947, 63.473949, 64.747489, 66.018242, 
-    67.285890, 68.550109, 69.810576, 71.066964, 72.318947, 73.566199, 74.808391, 76.045192, 
-    77.276272, 78.501299, 79.719940, 80.931859, 82.136721, 83.334189, 84.523926, 85.705592, 
-    86.878847, 88.043348, 89.198755, 90.344722, 91.480905, 92.606959, 93.722533, 94.827281, 
-    95.920854, 97.002899, 98.073066, 99.131000, 100.176349, 101.208755, 102.227862, 103.233313, 
-    104.224748, 105.201807, 106.164128, 107.111350, 108.043108, 108.959038, 109.858772, 110.741945, 
-    111.608188, 112.457131, 113.288403, 114.101633, 114.896448, 115.672472, 116.429331, 117.166649, 
-    117.884046, 118.581145, 119.257565, 119.912924, 120.546842, 121.158935, 121.748815, 122.316099, 
-    122.860399, 123.381326, 123.878493, 124.351506, 124.799977, 125.223509, 125.621710, 125.994184, 
-    126.340537, 126.660367, 126.953278, 127.218870, 127.456741, 127.666489, 127.847710, 128.000000, 
+	0.000000, 0.000000, 0.999479, 2.011744, 3.036530, 4.073569, 5.122593, 6.183332,
+	7.255517, 8.338874, 9.433131, 10.538014, 11.653247, 12.778552, 13.913653, 15.058271,
+	16.212123, 17.374930, 18.546409, 19.726275, 20.914243, 22.110027, 23.313339, 24.523890,
+	25.741391, 26.965550, 28.196074, 29.432671, 30.675045, 31.922900, 33.175939, 34.433863,
+	35.696373, 36.963168, 38.233946, 39.508403, 40.786235, 42.067137, 43.350800, 44.636918,
+	45.925181, 47.215278, 48.506897, 49.799726, 51.093451, 52.387755, 53.682323, 54.976837,
+	56.270977, 57.564424, 58.856855, 60.147950, 61.437382, 62.724829, 64.009963, 65.292456,
+	66.571981, 67.848208, 69.120804, 70.389439, 71.653778, 72.913487, 74.168230, 75.417670,
+	76.661468, 77.899286, 79.130781, 80.355614, 81.573439, 82.783913, 83.986691, 85.181425,
+	86.367767, 87.545369, 88.713880, 89.872949, 91.022222, 92.161346, 93.289965, 94.407723,
+	95.514263, 96.609225, 97.692249, 98.762975, 99.821039, 100.866079, 101.897729, 102.915623,
+	103.919394, 104.908673, 105.883091, 106.842276, 107.785858, 108.713461, 109.624713, 110.519236,
+	111.396655, 112.256590, 113.098663, 113.922493, 114.727699, 115.513896, 116.280702, 117.027730,
+	117.754595, 118.460908, 119.146280, 119.810321, 120.452639, 121.072843, 121.670538, 122.245328,
+	122.796819, 123.324612, 123.828308, 124.307509, 124.761812, 125.190815, 125.594115, 125.971307,
+	126.321986, 126.645744, 126.942172, 127.210862, 127.451402, 127.663381, 127.846385, 128.000000,
+	128.000000,
 };
+
+FLOAT_T gm2_pan_table[129];
+FLOAT_T *pan_table = sc_pan_table;
+
+void init_gm2_pan_table(void)
+{
+	int i;
+
+	gm2_pan_table[0] = 0;
+	for(i = 0; i < 127; i++)
+		gm2_pan_table[i + 1] = sin(M_PI / 2 * i / 126) * 128;
+								/* lookup_sine(i * SINE_CYCLE_LENGTH / 4 / 126) */
+	gm2_pan_table[128] = 128.0;
+}
 
 FLOAT_T sc_drum_level_table[128] = 
 {
