@@ -43,6 +43,7 @@ extern FLOAT_T *vol_table;
 extern FLOAT_T def_vol_table[];
 extern FLOAT_T gs_vol_table[];
 extern FLOAT_T *xg_vol_table; /* == gs_vol_table */
+extern FLOAT_T *pan_table;
 extern FLOAT_T bend_fine[];
 extern FLOAT_T bend_coarse[];
 extern FLOAT_T midi_time_table[], midi_time_table2[];
@@ -70,7 +71,7 @@ extern FLOAT_T sc_eg_decay_table[];
 extern FLOAT_T sc_eg_release_table[];
 extern FLOAT_T sc_vel_table[];
 extern FLOAT_T sc_vol_table[];
-extern FLOAT_T sc_pan_table[];
+extern FLOAT_T sc_pan_table[], gm2_pan_table[];
 extern FLOAT_T sc_drum_level_table[];
 extern FLOAT_T sb_vol_table[];
 extern FLOAT_T convex_vol_table[];
@@ -88,6 +89,7 @@ extern void init_freq_table_user(void);
 extern void init_bend_fine(void);
 extern void init_bend_coarse(void);
 extern void init_tables(void);
+extern void init_gm2_pan_table(void);
 extern void init_attack_vol_table(void);
 extern void init_sb_vol_table(void);
 extern void init_convex_vol_table(void);
